--- a/Task 16/RegistrationDemo/RegistrationDemo/RegistrationDemo.csproj
+++ b/Task 16/RegistrationDemo/RegistrationDemo/RegistrationDemo.csproj
@@ -259,6 +259,7 @@
     <Content Include="lib\jquery\jquery.min.js" />
     <Content Include="lib\jquery\jquery.slim.js" />
     <Content Include="lib\jquery\jquery.slim.min.js" />
+    <Content Include="Login.aspx" />
     <Content Include="RegisterJQuery.aspx" />
     <Content Include="libman.json" />
     <Content Include="lib\jquery\jquery.min.map" />
@@ -325,6 +326,13 @@
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterJS.aspx.cs">
